# splunk-add-on-for-sc4syslog

./: .fossa.yml  docker-compose-ci.yml  pyproject.toml  test_credentials.env
.github/workflows/: build-test-release.yml
.reuse/: dep5
package/: app.manifest
package/default/: app.conf  fields.conf  itsi_entity_type.conf  props.conf  savedsearches.conf  transforms.conf
package/default/data/ui/views/: sc4s_source_activity.xml
tests/knowledge/: conftest.py
