##
## SPDX-FileCopyrightText: 2021 Splunk, Inc. <sales@splunk.com>
## SPDX-License-Identifier: LicenseRef-Splunk-1-2020
##
##
[tool.poetry]
name = "splunk-add-on-for-sc4syslog"
version = "0.1.0"
description = ""
authors = ["rfaircloth-splunk <rfaircloth@splunk.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
splunk-add-on-ucc-framework = "^5.8.2"
pytest-splunk-addon = "^1.9.4"
pytest-expect = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
