[tool.poetry]
name = "splunk-add-on-for-sc4syslog"
version = "0.1.0"
description = ""
authors = ["rfaircloth-splunk <rfaircloth@splunk.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest-expect = "^1.1.0"
pytest-splunk-addon = "^1.11.3"
splunk-add-on-ucc-framework = "^5.14.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
